[package]
name = "http_pie"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.0"
clap = { version = "3", features = ["derive"] }     # 命令行解析
colored = "3.0.0"
jsonxf = "1.1"
mime = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
